# Daqana_code

./: compile.sh  install_manifest.txt  instructructions.int  make_build.sh
daqana_v6f2/: CMakeLists.txt  README.txt  daqana_v6f2.cc  daqana_v6f2_auxiliar_file_Code_not_working.cc  snappy-stubs-public.h  snappy.h
daqana_v6f3/: CMakeLists.txt  daqana_v6f3.cc
daqana_v6f4/: CMakeLists.txt  PleaseReadMePlease.txt  RootFileManager.cc  RootFileManager.hh  daqana_v6f4.cc  install_manifest.txt
daqana_v6f4_1/: CMakeLists.txt  daqana_v6f4_1.cc
others/: daqana_v6f1.cc
